package interface_adaptor.attack;

public class AttackViewModel {
}
