package use_case.attack;

public interface AttackInputBoundary {
}
