package use_case.attack;

public class AttackInputData {
}
