package use_case.attack;

public interface AttackOutputBoundary {
    void prepareSuccessView(AttackInputData user);
}
