package use_case.attack;

public class AttackOutputData {
}
