@startuml
!pragma layout smetana

class GameView

class AttackController

interface AttackInputBoundary

class AttackInputData

class AttackUseCaseInteractor

class AttackOutputData

interface AttackOutputBoundary

class AttackPresenter

class AttackViewModel

class AttackEntity

GameView -down-> AttackController
GameView -down-> AttackViewModel

AttackController --> AttackInputBoundary

AttackController --> AttackInputData

AttackUseCaseInteractor --|> AttackInputBoundary

AttackUseCaseInteractor --> AttackInputData

AttackUseCaseInteractor --> AttackOutputBoundary

AttackUseCaseInteractor --> AttackOutputData

AttackUseCaseInteractor --> AttackEntity
AttackUseCaseInteractor --> OpponentEntity
AttackUseCaseInteractor --> CardEntity
AttackUseCaseInteractor --> GameEntity

AttackPresenter --|> AttackOutputBoundary

AttackPresenter --> AttackViewModel



@enduml